<resources>
    <string name="app_name">Tor</string>
    <string name="title_home">Home</string>
    <string name="title_my_calendars">My Calendars</string>
    <string name="title_direct_messages">Direct Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_username_error">"You must provide an username"</string>
    <string name="enter_password_error">"You must provide a password"</string>
    <string name="user_invalid">"User name or password are incorrect"</string>
    <string name="connection_error">"Could not get response from server"</string>
    <string name="password_does_not_match">"Password does not match"</string>
    <string name="user_exists_error">"User already exists</string>
    <string name="signin_error">"Could not sign in</string>
</resources>