<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.eph.tor.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.eph.tor.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_my_calendars"
        android:name="com.eph.tor.ui.my_calendars.MyCalendarsFragment"
        android:label="@string/title_my_calendars"
        tools:layout="@layout/fragment_my_calendars" />

    <fragment
        android:id="@+id/navigation_direct_messages"
        android:name="com.eph.tor.ui.direct_messages.DirectMessagesFragment"
        android:label="@string/title_direct_messages"
        tools:layout="@layout/fragment_direct_messages" />
</navigation>